Fix #20: align colors to UI spec

--- a/src/client/scss/colors.scss
+++ b/src/client/scss/colors.scss
@@ -1,12 +1,12 @@
 $error-color: #d24b4b;
 $warning-color: #ffcc00;
 
-$navbar-bg-color: #3B404C;
-$panel-bg-color: #282C37;
-$code-bg-color: #22252E;
-$footer-bg-color: #0F1B27;
+$navbar-bg-color: #3b404b;
+$panel-bg-color: #2b2f3a;
+$code-bg-color: #22252e;
+$footer-bg-color: #0f1b27;
 
-$text-color: #d9d9d9;
-$text-highlight-color: #F3F3F3;
-$accent-color: #03E08A;
+$text-color: #f4f4f4;
+$text-highlight-color: #ffffff;
+$accent-color: #03e08a;
 $secondary-accent-color: palegoldenrod;
